--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
        
       <ul id="contacts">
         <li>
-          <address>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </address>
+          <address><a href="mailto:info@devstudio.com">info@devstudio.com</a></address>
         </li>
         <li>
-          <address>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </address>
+          <address><a href="tel:+110001111111">+11 (000) 111-11-11</a></address>
         </li>
       </ul>
     </header>
@@ -42,26 +38,36 @@
       <!--Секція Що ми робимо-->
       <section>
         <h2 hidden>advantages</h2>  
-        <h3>Strategy</h3>
-        <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-        </p>
-        <h3>Punctuality</h3>
-        <p>
-        Bring the key message to the brand's audience for the best price
-        within the shortest possible time.
-        </p>
-        <h3>Diligence</h3>
-        <p>
-        Research and confirm brands that present the strongest digital growth
-        opportunities and minimize risk.
-        </p>
-        <h3>Technologies</h3>
-        <p>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-        </p>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+            Research and confirm brands that present the strongest digital growth
+            opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+            Design practice focused on digital experiences. We bring forth a deep
+            passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <!--Секція портфоліо-->
@@ -100,48 +106,22 @@
         <h2 id="studio">Our Team</h2>
         <ul>
           <li>
-            <img
-            src="./images/mark.jpg"
-            width="264"
-            height="260"
-            alt="a men portrait"
-            />
+            <img src="./images/mark.jpg" width="264" height="260" alt="smiling men Mark Guerrero"/>
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-        </ul>
-        <ul>
           <li>
-            <img
-            src="./images/tom.jpg"
-            width="264"
-            height="260"
-            alt="a men portrait"
-            />
+            <img src="./images/tom.jpg" width="264" height="260" alt="smiling men Tom Ford"/>
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-        </ul>
-        <ul>
           <li>
-            <img
-            src="./images/camila.jpg"
-            width="264"
-            height="260"
-            alt="a women portrait"
-            />
+            <img src="./images/camila.jpg" width="264" height="260" alt="smiling women Camila Garcia"/>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-        </ul>
-        <ul>
           <li>
-            <img
-            src="./images/daniel.jpg"
-            width="264"
-            height="260"
-            alt="a men portrait"
-            />
+            <img src="./images/daniel.jpg" width="264" height="260" alt="smiling men Daniel Wilson"/>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
