--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
           <li><a href="#contacts">Contacts</a></li>
         </ul>
       </nav>
-       
-      <ul id="contacts">
-        <li>
-          <address><a href="mailto:info@devstudio.com">info@devstudio.com</a></address>
-        </li>
-        <li>
-          <address><a href="tel:+110001111111">+11 (000) 111-11-11</a></address>
-        </li>
-      </ul>
+      
+      <address id="contacts">
+        <ul >
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
 
     <main>
